--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                    <small>Nayapalli, Bhubaneswar, Odisha</small>
+                    <small>Room no-4, Bijupattnaik Commercial Complex, Damana Square, Chandrasekharpur ,Bhubaneswar, Odisha, India - 751016</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <small class="far fa-clock text-primary me-2"></small>
@@ -289,7 +289,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded overflow-hidden">
                         <div class="d-flex">
                             <img class="img-fluid w-75" src="img/user6.jpeg" alt="" style="max-height: 300px;">
@@ -304,7 +304,7 @@
                             <span>Technical Head</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -317,7 +317,7 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Nayapalli, Bhubaneswar, Odisha</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Room no-4, Bijupattnaik Commercial Complex, Damana Square, Chandrasekharpur ,Bhubaneswar, Odisha, India - 751016</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 9692 097 1450</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@bhaktisolarenergy.in</p>
                     <div class="d-flex pt-2">
