--- a/about.html
+++ b/about.html
@@ -228,7 +228,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item rounded overflow-hidden">
                         <div class="d-flex">
-                            <img class="img-fluid w-75" src="img/user2.jpeg" alt="" style="max-height: 300px;">
+                            <!-- <img class="img-fluid w-75" src="img/user2.jpeg" alt="" style="max-height: 300px;"> -->
                             <div class="team-social w-25">
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-twitter"></i></a>
@@ -391,7 +391,7 @@
     <!-- Back to Top -->
      <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
 
-  <a href="https://wa.me/9124318222" target="_blank" class="btn btn-lg btn-primary btn-lg-square rounded-circle whatsapp-icon">
+  <a href="https://wa.me/919124318222" target="_blank" class="btn btn-lg btn-primary btn-lg-square rounded-circle whatsapp-icon">
     <i class="bi bi-whatsapp"></i>
 </a>
 
